--- a/AppLearn/Views/Shared/_Layout.cshtml
+++ b/AppLearn/Views/Shared/_Layout.cshtml
@@ -10,22 +10,40 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #9b1f17;">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppLearn</a>
+                <!-- Company/App Logo or Name -->
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 70px; width: 200px;">
+                </a>
+                <!-- Toggler Button for Mobile View -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+
+                <!-- Navigation Links (Centered) -->
+                <div class="navbar-collapse collapse d-sm-flex justify-content-center">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: white;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Games" asp-action="Index" style="color: white;">Games</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="About" asp-action="Index" style="color: white;">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Plans" asp-action="Index" style="color: white;">Plans</a>
                         </li>
                     </ul>
+                </div>
+
+                <!-- Sign In and Register Buttons -->
+                <div>
+                    <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                    <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                 </div>
             </div>
         </nav>
