#2 This code adjustments were done by Peyton Hopkins, he hadded a basic picture Slideshow on the landing page. Jeremy had to re-add the App-Learn Wordmark photo since it didn't upload correctly with the last commit

--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -3,6 +3,33 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4 intro">Exploring Science One Game At A Time</h1>
+    <hr>
+</div>
+<div>
+    <h2 class="intro text-center">Our Games</h2>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="carousel slide w-50" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+                <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h4>Projectile Game</h4>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="10000">
+                <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h4>Pascals Principle</h4>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="10000">
+                <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h4>Potential & Kinetic Energy</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
