--- a/AppLearn/wwwroot/css/site.css
+++ b/AppLearn/wwwroot/css/site.css
@@ -2,9 +2,35 @@ html {
   font-size: 14px;
 }
 
-@media (min-width: 768px) {
+.img-wrapper{
+    max-width: 100%;
+    height: 65vw;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+.img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+@media screen and (min-width: 768px) {
   html {
     font-size: 16px;
+  }
+
+  .carousel-inner{
+      display: flex;
+  }
+
+  .carousel-item{
+      display: block;
+      margin-right: 0;
+      flex: 0 0 calc(100%/3);
+  }
+
+  .img-wrapper{
+      height: 23vw;
   }
 }
 
@@ -20,4 +46,17 @@ body {
 .intro {
     margin-top: 10%;
     margin-bottom: 10%;
+}
+
+.gameIntro{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.carousel-inner{
+    padding: 1em;
+}
+
+.card{
+    margin: 0 0.5em;
 }
