Changed primary color palette to Teal, Implemented main section with a temp background image and box surronding the text.

--- a/AppLearn/Views/Shared/_Layout.cshtml
+++ b/AppLearn/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #9b1f17;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #1f959c;">
             <div class="container-fluid">
                 <!-- Company/App Logo or Name -->
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
@@ -48,13 +48,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container bodyContainer">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #9b1f17;">
+    <footer class="border-top footer text-muted" style="background-color: #1f959c;">
         <div class="container">
             &copy; 2023 - AppLearn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
