--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -3,68 +3,74 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4 intro">Exploring Science One Game At A Time</h1>
-    <hr>
-</div>
-<div>
-    <h1 class="gameIntro text-center">Our Games</h1>
-</div>
-<div class="d-flex justify-content-center">
-    <div id="gameCarousel" class="carousel w-100" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class= "carousel-item active">
-                <div class="card">
-                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top"/>
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Ipsum Dolor</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">Projectile Motion</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">Pascals Principle</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">Potential & Kinetic Energy</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">Tempor Incididunt</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="welcomeSection">
+        <div class="whiteBackground">
+            <h1 class="fw-bold centerText">Exploring Science One Game At A Time</h1>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        
+    </div>
+</div>
+<div class="notFullContainer">
+    <div>
+        <h1 class="gameIntro text-center">Our Games</h1>
+    </div>
+    <div class="d-flex justify-content-center">
+        <div id="gameCarousel" class="carousel w-100" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="card">
+                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem Ipsum Dolor</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title">Projectile Motion</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title">Pascals Principle</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title">Potential & Kinetic Energy</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title">Tempor Incididunt</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </div>
 </div>
