--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -74,3 +74,19 @@
         </div>
     </div>
 </div>
+<div style="background-color: black; color: white; padding: 20px; overflow: hidden;">
+    <div style="float: left; width: 60%; height: 400px;">
+        <iframe width="700" height="400" src="https://www.youtube.com/embed/RdzCXBgB-9s" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div style="float: right; width: 40%; height: 400px; padding-left: 20px; display: flex; align-items: center;">
+        <div>
+            <h2 style="text-align: center;">What is AppLearn?</h2>
+            <p>
+                AppLearn is a cutting-edge platform that empowers users to learn and explore a wide range of topics.
+                Our mission is to provide high-quality educational content that enhances your skills and knowledge.
+                Whether you're a beginner or an expert, AppLearn has something for everyone.
+            </p>
+        </div>
+    </div>
+    <div style="clear: both;"></div>
+</div>
