--- a/AppLearn/Views/Shared/_Layout.cshtml
+++ b/AppLearn/Views/Shared/_Layout.cshtml
@@ -9,13 +9,9 @@
     <link rel="stylesheet" href="~/AppLearn.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #1f959c;">
+    <header style="padding: px; background-color: #9b1f17;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <!-- Company/App Logo or Name -->
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 70px; width: 200px;">
-                </a>
                 <!-- Toggler Button for Mobile View -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +20,10 @@
 
                 <!-- Navigation Links (Centered) -->
                 <div class="navbar-collapse collapse d-sm-flex justify-content-center">
+                    <!-- Company/App Logo or Name -->
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                        <img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 70px; width: 200px;">
+                    </a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: white;">Home</a>
@@ -37,15 +37,14 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Plans" asp-action="Index" style="color: white;">Plans</a>
                         </li>
+                        <div>
+                            <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                            <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </div>
                     </ul>
                 </div>
-
-                <!-- Sign In and Register Buttons -->
-                <div>
-                    <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
-                    <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                </div>
             </div>
+            
         </nav>
     </header>
     <div class="container bodyContainer">
@@ -54,7 +53,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #1f959c;">
+    <footer class="border-top footer text-muted" style="background-color: #9b1f17;">
         <div class="container">
             &copy; 2023 - AppLearn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
