#2 Added another section to showcase the games, added some default photos and descritpion.

--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -74,11 +74,11 @@
         </div>
     </div>
 </div>
-<div style="background-color: black; color: white; padding: 20px; overflow: hidden;">
-    <div style="float: left; width: 60%; height: 400px;">
-        <iframe width="700" height="400" src="https://www.youtube.com/embed/RdzCXBgB-9s" frameborder="0" allowfullscreen></iframe>
+<div style="background-color: #17939b; color: white; padding: 20px; overflow: hidden;">
+    <div style="float: left; width: 60%; height: 400px; padding-left: 50px; padding-top: 13px;">
+        <iframe width="700" height="375" src="https://www.youtube.com/embed/RdzCXBgB-9s" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div style="float: right; width: 40%; height: 400px; padding-left: 20px; display: flex; align-items: center;">
+    <div style="float: right; width: 40%; height: 400px; padding-right: 40px; display: flex; align-items: center;">
         <div>
             <h2 style="text-align: center;">What is AppLearn?</h2>
             <p>
@@ -90,3 +90,29 @@
     </div>
     <div style="clear: both;"></div>
 </div>
+
+<section class="game-section">
+    <div class="game" >
+        <img src="~/img/video-game-controller-top.jpg" alt="Game 1">
+        <h2>Game 1</h2>
+        <p>
+            A fantasy archery game where players use real-world math to hit targets. Calculations for projectile motion, 
+            wind speed, and arrow properties add depth. Players solve puzzles and unlock magical enhancements, blending 
+            education with action in a mystical realm.
+        </p>
+    </div>
+
+    <div class="game">
+        <img src="~/img/controller2.jpeg" alt="Game 2">
+        <h2>Game 2</h2>
+        <p>
+            A fantasy archery game where players use real-world math to hit targets. Calculations for projectile motion, 
+            wind speed, and arrow properties add depth. Players solve puzzles and unlock magical enhancements, blending 
+            education with action in a mystical realm.
+        </p>
+    </div>
+
+    <!-- Add more games as needed -->
+
+</section>
+
