--- a/AppLearn/Views/Shared/_Layout.cshtml
+++ b/AppLearn/Views/Shared/_Layout.cshtml
@@ -26,25 +26,24 @@
                     </a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: white;">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Games" asp-action="Index" style="color: white;">Games</a>
+                            <a class="nav-link" asp-area="" asp-controller="Games" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">Games</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="About" asp-action="Index" style="color: white;">About Us</a>
+                            <a class="nav-link" asp-area="" asp-controller="About" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Plans" asp-action="Index" style="color: white;">Plans</a>
+                            <a class="nav-link" asp-area="" asp-controller="Plans" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">Plans</a>
                         </li>
-                        <div>
-                            <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
-                            <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </div>
                     </ul>
+                    <div>
+                        <a class="button-50" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                        <a class="button-50" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                    </div>
                 </div>
             </div>
-            
         </nav>
     </header>
     <div class="container bodyContainer">
