--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -5,61 +5,29 @@
 <div class="text-center">
     <div class="welcomeSection">
         <div class="whiteBackground">
-            <h1 class="fw-bold centerText">Exploring Science One Game At A Time</h1>
+            <h1 class="fw-bold centerText display-5">Exploring Science One Game At A Time</h1>
         </div>
-        
     </div>
 </div>
 <div class="notFullContainer">
     <div>
-        <h1 class="gameIntro text-center">Our Games</h1>
+        <h1 class="gameIntro text-center display-5">Testimonials</h1>
     </div>
     <div class="d-flex justify-content-center">
-        <div id="gameCarousel" class="carousel w-100" data-bs-ride="carousel">
+        <div id="gameCarousel" class="carousel w-50 slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="card">
-                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum Dolor</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
+                    <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="fs-3">First slide label</h3>
+                        <p class="fs-5">Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title">Projectile Motion</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title">Pascals Principle</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title">Potential & Kinetic Energy</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <img src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title">Tempor Incididunt</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
+                    <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="fs-3">Second slide label</h3>
+                        <p class="fs-5">Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
             </div>
