--- a/AppLearn/Views/Home/Index.cshtml
+++ b/AppLearn/Views/Home/Index.cshtml
@@ -2,46 +2,51 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <div class="welcomeSection">
-        <div class="whiteBackground">
-            <h1 class="fw-bold centerText display-5">Exploring Science One Game At A Time</h1>
-        </div>
-    </div>
-</div>
-<div class="notFullContainer">
-    <div>
-        <h1 class="gameIntro text-center display-5">Testimonials</h1>
-    </div>
-    <div class="d-flex justify-content-center">
-        <div id="gameCarousel" class="carousel w-50 slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3 class="fs-3">First slide label</h3>
-                        <p class="fs-5">Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://cdn.stocksnap.io/img-thumbs/960w/colorful-pencils_E0Q4VWMH5V.jpg" />
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3 class="fs-3">Second slide label</h3>
-                        <p class="fs-5">Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
+<section id="WelcomeSection">
+    <div class="text-center">
+        <div class="welcomeSection">
+            <div class="whiteBackground">
+                <h1 class="fw-bold centerText display-5">Exploring Science One Game At A Time</h1>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </div>
-</div>
+</section>
+<section id="Testimonials">
+    <div class="notFullContainer">
+        <div>
+            <h2 class="gameIntro text-center display-4">User Testimonials</h2>
+        </div>
+        <div class="d-flex justify-content-center" style="margin-bottom:5vh;">
+            <div id="gameCarousel" class="carousel w-50 slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block" src="https://americanradioworks.publicradio.org/features/personalized-learning/images/mooresville13.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3 class="fs-3">First slide label</h3>
+                            <p class="fs-5">Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block" src="https://assets.gocoderz.com/site/wp-content/uploads/2016/07/cute-pupils-in-computer-class-with-teacher-1024x512.jpg" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3 class="fs-3">Second slide label</h3>
+                            <p class="fs-5">Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="AppLearnInfo">
 <div style="background-color: #17939b; color: white; padding: 20px; overflow: hidden;">
     <div style="float: left; width: 60%; height: 400px; padding-left: 50px; padding-top: 13px;">
         <iframe width="700" height="375" src="https://www.youtube.com/embed/RdzCXBgB-9s" frameborder="0" allowfullscreen></iframe>
@@ -57,8 +62,8 @@
         </div>
     </div>
     <div style="clear: both;"></div>
-</div>
-
+    </div>
+</section>
 <section class="game-section">
     <div class="game" >
         <img src="~/img/video-game-controller-top.jpg" alt="Game 1">
@@ -83,4 +88,3 @@
     <!-- Add more games as needed -->
 
 </section>
-
